no-correct-process-title

--- a/css/palette.css
+++ b/css/palette.css
@@ -6,6 +6,7 @@
 
   --white-normal: #f8fcff;
   --white-dark: #b9bdc0;
+  --white-predark: #dfe3e6;
   --white-accent: #fff;
 
   /* --gray-light: #50535e;
