--- a/css/style.css
+++ b/css/style.css
@@ -785,3 +785,61 @@ input[type="checkbox"]:checked::after {
   align-items: center;
   justify-content: center;
 }
+
+
+.color-analysis-summary {
+  line-height: 1.5;
+  font-size: 14px;
+  color: var(--white-predark);
+  margin-bottom: 8px;
+}
+.color-analysis-summary b {
+  color: var(--warning-accent);
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  font-weight: bold;
+  padding-right: 3px;
+}
+.color-analysis-swatch {
+  display: inline-block;
+  vertical-align: middle;
+  width: 14px;
+  height: 14px;
+  border-radius: 4px;
+  border: 1px solid var(--gray-border);
+  /* margin-right: 6px; */
+  margin-bottom: 2px;
+}
+
+.wrapper-log-item-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  background-color: var(--gray-panel);
+  padding: 12px;
+  overflow-y: auto;
+  overflow-x: auto;      
+  white-space: nowrap;
+}
+
+.color-analysis-title {
+  font-size: 16px;
+  line-height: 14px;
+  font-weight: bold;
+  color: var(--yellow-accent, var(--white-normal));
+  /* margin-bottom: 6px; */
+  letter-spacing: 0.5px;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  justify-content: center;
+}
+.color-analysis-arrow {
+  color: var(--white-predark, var(--white-normal));
+  font-size: 18px;
+  margin: 0 4px;
+}
